--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="footer__container">
   <footer class="footer">
     <a class="link-footer" href="https://github.com/HomyakovaAlena"
       ><img  i18n-alt src="./assets/GitHubLogo.png" alt="Github Logo" height="30"
