--- a/src/app/boards/components/board-preview/board-preview.component.scss
+++ b/src/app/boards/components/board-preview/board-preview.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .card-container {
   width: min(700px, 90%);
   height: 100px;
@@ -8,7 +10,7 @@
   align-items: center;
   gap: 5px;
   cursor: pointer;
-  background-color: lighten(#d9dde3, 10);
+  background-color: lighten(vars.$light-gray, 10);
   box-shadow: inset 0 0 15px rgb(190, 193, 213);
   transition: all 0.1s ease-in-out;
 
