--- a/src/app/boards/components/board-view/board-view.component.scss
+++ b/src/app/boards/components/board-view/board-view.component.scss
@@ -1,6 +1,8 @@
+@use 'src/variables' as vars;
+
 .card-container {
   width: 100%;
-  height: 100px;
+  height: 90px;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -8,7 +10,7 @@
   gap: 30px;
   justify-content: center;
   align-items: center;
-  background-color: #dde2ed;
+  background-color: vars.$light-gray;
   box-shadow: inset 0 0 15px rgb(190, 193, 213);
 
   &:hover {
