--- a/src/app/boards/components/boards-list/boards-list.component.scss
+++ b/src/app/boards/components/boards-list/boards-list.component.scss
@@ -1,9 +1,12 @@
+@use 'src/variables' as vars;
+
+
 .container_boardsList {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
-  min-height: calc(100vh - 250px);
+  min-height: calc(100vh - 260px);
   width: 100%;
   justify-content: center;
   overflow: hidden;
@@ -41,7 +44,7 @@ app-board-preview {
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  background-color: #dde2ed;
+  background-color: vars.$light-gray;
   margin-bottom: 20px;
   box-shadow: inset 0 0 15px rgb(190, 193, 213);
   &:hover {
