--- a/src/app/pm-app/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/pm-app/pages/welcome-page/welcome-page.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .container_wide {
   display: flex;
   flex-direction: row;
@@ -6,13 +8,13 @@
 
 .left {
   width: 30%;
-  height: calc(100vh - 150px);
+  height: calc(100vh - 160px);
   background: no-repeat right/100% url('../../../../assets/tall.jpg');
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
-  color: darken(#3f51b5, 5);
+  color: darken(vars.$indigo, 10);
   padding-top: 20px;
   background-size: cover;
 }
@@ -26,6 +28,7 @@
   align-self: flex-start;
   justify-content: center;
   align-items: center;
+  font-style: italic;
   gap: 30px;
   position: relative;
 
@@ -84,7 +87,7 @@
 
   justify-content: space-around;
   align-items: center;
-  height: calc(100vh - 130px);
+  height: calc(100vh - 140px);
   background: no-repeat right/100% url('../../../../assets/clouds.jpg');
   background-size: cover;
   gap: 0;
@@ -155,7 +158,7 @@
       text-align: center;
       border-radius: 20px;
       margin: 0 auto;
-      color: black;
+      color: vars.$black;
       h3 {
         padding: 0;
         margin: 0;
@@ -195,7 +198,7 @@
 
         &:hover {
           background-color: #c7cacf98;
-          color: #3f51b5;
+          color: vars.$indigo;
         }
       }
     }
@@ -211,7 +214,7 @@
 
       &:hover {
         background-color: #c7cacf98;
-        color: #3f51b5;
+        color: vars.$indigo;
       }
     }
   }
@@ -228,7 +231,7 @@
       align-items: center;
       justify-content: center;
       gap: 5px;
-      color: #3f51b5;
+      color: vars.$indigo;
     }
   }
 }
