--- a/src/app/shared/components/tasks-search/tasks-search.component.scss
+++ b/src/app/shared/components/tasks-search/tasks-search.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .search-container {
   display: flex;
   flex-direction: column;
@@ -7,7 +9,7 @@
   height: 100%;
   z-index: 10;
   position: relative;
-  background-color: #3f51b5;
+  background-color: vars.$indigo;
   color: white;
   font-size: 14px;
   padding-bottom: 20px;
@@ -66,17 +68,18 @@
     }
 
     &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 5px rgb(45, 46, 51);
+      box-shadow: inset 0 0 5px vars.$dark-blue;
       border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-      background: rgb(146, 153, 163);
+      background: vars.$blue-gray;
+      box-shadow: inset 0 0 5px vars.$dark-blue;
       border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background: darken(rgb(146, 153, 163), 20);
+      background: darken(vars.$blue-gray, 20);
     }
   }
 
