--- a/src/app/tasks/components/column-item/column-item.component.scss
+++ b/src/app/tasks/components/column-item/column-item.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .column-wrapper {
   width: 300px;
   box-sizing: border-box;
@@ -21,14 +23,14 @@
   padding: 0px 10px 0px 20px;
   margin: 0px;
   width: 100%;
-  background-color: darken(#e0e0e0, 60);
+  background-color: vars.$gray-medium;
   color: white;
   border-radius: 7px;
   border: none;
   overflow: hidden;
   &:hover {
-    background-color: darken(#e0e0e0, 75);
-    box-shadow: inset 0 0 30px black;
+    background-color: vars.$gray-medium;
+    box-shadow: inset 0 0 30px vars.$dark-blue;
   }
 }
 
