--- a/src/app/tasks/components/task-item/task-item.component.scss
+++ b/src/app/tasks/components/task-item/task-item.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .task-item {
   display: flex;
   flex-direction: column;
@@ -5,9 +7,9 @@
   align-items: stretch;
   height: 80px;
   padding: 0px;
-  background-color: #dde2ed;
+  background-color: vars.$light-gray;
   border-radius: 2px;
-  border: 1px solid darken(#dde2ed, 10);
+  border: 1px solid darken(vars.$light-gray, 10);
   box-sizing: border-box;
   cursor: pointer;
   box-shadow: inset 0 0 15px rgb(190, 193, 213);
@@ -50,7 +52,7 @@
       position: relative;
       overflow: visible;
       height: max-content;
-      background-color: #e0e0e0;
+      background-color: vars.$light-gray;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
