--- a/src/app/tasks/components/tasks-list/tasks-list.component.scss
+++ b/src/app/tasks/components/tasks-list/tasks-list.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
@@ -33,28 +35,29 @@
   height: 400px;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: lighten(#d9dde3, 10);
+  background-color: lighten(vars.$light-gray, 10);
   border-radius: 4px;
   display: block;
   display: flex;
   flex-direction: column;
   gap: 2px;
-}
 
-.tasks-list::-webkit-scrollbar {
-  width: 10px;
-}
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
 
-.tasks-list::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(45, 46, 51);
-  border-radius: 10px;
-}
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 10px;
+  }
 
-.tasks-list::-webkit-scrollbar-thumb {
-  background: rgb(146, 153, 163);
-  border-radius: 10px;
-}
+  &::-webkit-scrollbar-thumb {
+    background: vars.$blue-gray;
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 10px;
+  }
 
-.tasks-list::-webkit-scrollbar-thumb:hover {
-  background: darken(rgb(146, 153, 163), 20);
+  &::-webkit-scrollbar-thumb:hover {
+    background: darken(vars.$blue-gray, 20);
+  }
 }
