--- a/src/app/tasks/pages/board-item-page/board-item-page.component.scss
+++ b/src/app/tasks/pages/board-item-page/board-item-page.component.scss
@@ -1,3 +1,5 @@
+@use 'src/variables' as vars;
+
 .columns-container {
   max-width: 99vw;
   display: flex;
@@ -5,23 +7,24 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   overflow-x: auto;
-}
+  min-height: calc(100vh - 230px);
 
-.columns-container::-webkit-scrollbar {
-  width: 10px;
-}
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
 
-.columns-container::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(45, 46, 51);
-  border-radius: 15px;
-}
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 10px;
+  }
 
-.columns-container::-webkit-scrollbar-thumb {
-  background: rgb(146, 153, 163);
-  box-shadow: inset 0 0 5px rgb(45, 46, 51);
-  border-radius: 10px;
-}
+  &::-webkit-scrollbar-thumb {
+    background: vars.$blue-gray;
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 10px;
+  }
 
-.columns-container::-webkit-scrollbar-thumb:hover {
-  background: darken(rgb(146, 153, 163), 20);
+  &::-webkit-scrollbar-thumb:hover {
+    background: darken(vars.$blue-gray, 20);
+  }
 }
