--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use 'src/variables' as vars;
 @include mat.core();
 
 $project-management-app-primary: mat.define-palette(mat.$indigo-palette);
@@ -28,6 +29,25 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 15px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: vars.$blue-gray;
+    box-shadow: inset 0 0 5px vars.$dark-blue;
+    border-radius: 15px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: darken(vars.$blue-gray, 20);
+  }
 }
 
 ul {
@@ -46,7 +66,7 @@ a:visited {
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
-  min-height: calc(100vh - 250px);
+  min-height: calc(100vh - 320px);
   justify-content: flex-start;
   overflow: hidden;
 }
@@ -57,12 +77,12 @@ a:visited {
   margin: 30px auto;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 190px);
+  min-height: calc(100vh - 200px);
   overflow-x: hidden;
   max-width: 900px;
 }
 .mat-tooltip {
-  background-color: darken(#e0e0e0, 70);
+  background-color: darken(vars.$light-gray, 70);
   font-size: 12px;
   white-space: pre-line;
   -webkit-touch-callout: none;
@@ -72,22 +92,4 @@ a:visited {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-}
-
-body::-webkit-scrollbar {
-  width: 15px;
-}
-
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(45, 46, 51);
-  border-radius: 15px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: rgb(146, 153, 163);
-  border-radius: 15px;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background: darken(rgb(146, 153, 163), 20);
 }
