refactor: pm-app page styles

--- a/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="quote__down">
-      <h3 i18n>
+      <h3 i18n class="quote__down__text">
         Do it well<br />
         with our Kanban board!
       </h3>
