--- a/src/app/pm-app/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/pm-app/pages/welcome-page/welcome-page.component.scss
@@ -14,7 +14,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: baseline;
-  color: darken(vars.$indigo, 10);
+  color: vars.$indigo;
   padding-top: 20px;
   background-size: cover;
 }
@@ -25,30 +25,28 @@
   margin: 0px auto;
   display: flex;
   flex-direction: column;
-  align-self: flex-start;
   justify-content: center;
   align-items: center;
-  font-style: italic;
   gap: 30px;
-  position: relative;
 
   &__text {
     margin: 0px auto;
     padding: 10px;
+    font-style: italic;
+    font-size: 18px;
 
     &::before,
     &::after {
       content: '“';
-      font-family: Georgia;
       font-size: 8rem;
-      margin: 0 0 -6rem;
+      margin: 0 0 -6rem -2rem;
       position: absolute;
       opacity: 0.5;
     }
 
     &::after {
       content: '”';
-      margin: 5rem 0rem 0 0;
+      margin: 5rem 0rem 0 -2rem;
     }
   }
 
@@ -56,7 +54,11 @@
     align-self: flex-end;
     text-align: end;
     margin: 15px;
-    padding: 20px;
+    padding: 18px;
+
+    &__text {
+      font-size: 18px;
+    }
   }
 
   span {
@@ -84,7 +86,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-
   justify-content: space-around;
   align-items: center;
   height: calc(100vh - 140px);
@@ -158,7 +159,7 @@
       text-align: center;
       border-radius: 20px;
       margin: 0 auto;
-      color: vars.$black;
+      color: darken(vars.$indigo, 30);
       h3 {
         padding: 0;
         margin: 0;
@@ -248,6 +249,14 @@
       justify-content: flex-start;
       align-items: flex-start;
       margin: 30px;
+      &__text {
+        font-size: 16px;
+      }
+
+      &__down__text {
+        margin: 20px auto 20px;
+        font-size: 16px;
+      }
     }
   }
   .right {
@@ -282,20 +291,7 @@
       &__text {
         margin: 0px auto;
         padding: 00px;
-
-        &::before,
-        &::after {
-          font-size: 6rem;
-        }
-
-        &::after {
-          content: '”';
-          margin: 4rem 0rem 0 0;
-        }
-      }
-
-      &__down {
-        margin: 20px auto 20px;
+        font-size: 16px;
       }
     }
   }
