--- a/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -2,7 +2,7 @@
   <section class="left">
     <div class="quote">
       <h3 class="quote__text" i18n>
-        Everything you do should be done well, even if you commit madness.
+        Everything you do should be done well,<br />even if you commit madness.
       </h3>
       <span i18n>Honore de Balzac</span>
     </div>
