refactor: add route resolvers, correct state work for drag&drop events, reset state on leaving board page, remove null | undefined where possible, minor code refactorings

--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -48,7 +48,7 @@
       mat-flat-button
       color="primary"
       aria-label="icon button with icon"
-      [class]="'button'"
+      class="button"
       ariaCurrentWhenActive="page"
       type="submit"
       [disabled]="!loginForm.valid"
