--- a/src/app/boards/components/create-board-button/create-board-button.component.html
+++ b/src/app/boards/components/create-board-button/create-board-button.component.html
@@ -2,7 +2,7 @@
   mat-stroked-button
   color="accent"
   aria-label="icon button with icon"
-  [class]="'button'"
+  class="button"
   routerLink="/boards"
   routerLinkActive="active"
   ariaCurrentWhenActive="page"
