--- a/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
+++ b/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
@@ -57,7 +57,7 @@
       mat-stroked-button
       color="primary"
       aria-label="icon button with icon"
-      [class]="'button'"
+      class="button"
       ariaCurrentWhenActive="page"
       type="submit"
       [disabled]="!createBoardForm.valid"
