--- a/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -84,10 +84,15 @@
                 alt="Typescript_logo Logo"
                 height="30px"
               />
-              <img  i18n-alt src="./assets/ngrx.svg" alt="ngrx Logo" height="30px" />
-              <img  i18n-alt src="./assets/rxjs-1.svg" alt="rxjs Logo" height="30px" />
-              <img  i18n-alt src="./assets/scss-logo.png" alt="scss Logo" height="30px" />
-              <img  i18n-alt src="./assets/angular-material-logo.svg" alt="material Logo" height="30px" />
+              <img i18n-alt src="./assets/ngrx.svg" alt="ngrx Logo" height="30px" />
+              <img i18n-alt src="./assets/rxjs-1.svg" alt="rxjs Logo" height="30px" />
+              <img i18n-alt src="./assets/scss-logo.png" alt="scss Logo" height="30px" />
+              <img
+                i18n-alt
+                src="./assets/angular-material-logo.svg"
+                alt="material Logo"
+                height="30px"
+              />
             </div>
           </div>
 
