--- a/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
+++ b/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
@@ -20,7 +20,7 @@
           (blur)="getNameErrorMessage()"
         />
         <button
-          *ngIf="name"
+          *ngIf="user.name"
           type="button"
           matSuffix
           mat-icon-button
@@ -45,7 +45,7 @@
           (blur)="getLoginErrorMessage()"
         />
         <button
-          *ngIf="login"
+          *ngIf="user.login"
           matSuffix
           type="button"
           mat-icon-button
@@ -80,7 +80,6 @@
           <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
         </button>
         <button
-          *ngIf="password"
           matSuffix
           mat-icon-button
           type="button"
@@ -115,7 +114,6 @@
           <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
         </button>
         <button
-          *ngIf="confirmPassword"
           matSuffix
           mat-icon-button
           type="button"
@@ -145,7 +143,7 @@
         mat-raised-button
         color="primary"
         aria-label="icon button with icon"
-        [class]="'button'"
+        class="button"
         ariaCurrentWhenActive="page"
         type="submit"
         [disabled]="!editProfileForm.valid"
@@ -157,7 +155,7 @@
         mat-raised-button
         color="warn"
         aria-label="icon button with icon"
-        [class]="'button'"
+        class="button"
         ariaCurrentWhenActive="page"
         type="button"
         (click)="openDialog()"
