--- a/src/app/auth/components/signup-form/signup-form.component.html
+++ b/src/app/auth/components/signup-form/signup-form.component.html
@@ -66,7 +66,7 @@
       mat-flat-button
       color="primary"
       aria-label="icon button with icon"
-      [class]="'button'"
+      class="button"
       ariaCurrentWhenActive="page"
       type="submit"
       [disabled]="!signupForm.valid"
