--- a/src/app/tasks/components/create-task-dialog/create-task-dialog.component.html
+++ b/src/app/tasks/components/create-task-dialog/create-task-dialog.component.html
@@ -1,4 +1,5 @@
 <h2 mat-dialog-title>{{ configDialog.title }}</h2>
+<ng-container *ngIf="taskSubscription$ | async"></ng-container>
 
 <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="createTaskForm">
   <div class="owner" *ngIf="user$ | async as user">
@@ -88,7 +89,7 @@
       mat-stroked-button
       color="primary"
       aria-label="icon button with icon"
-      [class]="'button'"
+      class="button"
       ariaCurrentWhenActive="page"
       type="submit"
       [disabled]="!createTaskForm.valid"
